Added language support with caching and a ini file write method

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -1,7 +1,7 @@
 /* 
     Document   : style
     Created on : 06.04.2011, 15:04:45
-    Author     : Martin Lantzsch
+    Author     : Martin Lantzsch <martin@linux-doku.de>
     Description: Simple stylesheet for the default HadesEngine design
 */
 
